# resident

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  idf_component.yml  library.json
.claude/: napkin.md  settings.local.json
.github/workflows/: ci.yml  publish.yml
docs/: api.md  changelog.md  migration-0.4-to-0.5.md  publishing.md  start-building.md
docs/superpowers/plans/: 2026-04-26-espidf-example-and-test-suite.md  2026-04-27-driver-dx.md  2026-05-07-A-resident-web-device-agent.md  2026-05-07-B-device-skill-and-write-device-skill.md  2026-05-07-C-validate-app-skill.md  2026-05-07-D-create-app-and-push-app-skills.md  2026-05-12-adafruit-esp32-s2-feather-bringup.md  2026-05-12-create-app-device-skill-resolution.md  2026-05-12-validate-app-ref-flag.md  2026-05-14-resident-sandbox-rename.md
docs/superpowers/specs/: 2026-04-26-driver-dx-design.md  2026-04-26-espidf-example-and-test-suite-design.md  2026-05-07-resident-sandbox-tooling-design.md  2026-05-12-adafruit-esp32-s2-feather-bringup-design.md  2026-05-12-create-app-device-skill-resolution-design.md  2026-05-12-validate-app-ref-flag-design.md  2026-05-14-resident-sandbox-rename-design.md
examples/adafruit-esp32-s2-feather/: README.md  platformio.ini
examples/adafruit-esp32-s2-feather/device/: DEVICE-SKILL.md  README.md  platformio.ini
examples/adafruit-esp32-s2-feather/device-minimal-resident/: README.md  partitions.csv  platformio.ini
examples/adafruit-esp32-s2-feather/device-minimal-resident/src/: main.cpp
examples/adafruit-esp32-s2-feather/device-no-resident/: README.md
examples/adafruit-esp32-s2-feather/device-no-resident/src/: main.cpp
examples/adafruit-esp32-s2-feather/device/device-apps/: drift.lua  (+6 more)
examples/adafruit-esp32-s2-feather/src/: main.cpp
examples/espidf-basic/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/espidf-basic/main/: CMakeLists.txt  StubLEDDriver.cpp  StubLEDDriver.h  idf_component.yml  main.cpp
examples/espidf-basic/tools/: fetch-deps.sh
examples/m5stick-claude-code/: README.md  cat-claude.lua  cat.lua  server.ts
examples/m5stick-clock/: README.md  main.cpp  worker.ts
examples/m5stick-clock/device-apps/: swiss-clock.lua
examples/m5stick-demo/: DEVICE-SKILL.md  README.md  send-app.sh
examples/m5stick-demo/device/: platformio.ini
examples/m5stick-demo/device-apps/: accel.lua  bounce.lua  buttons-buzzer.lua  daisy.lua  hello.lua  rainbow.lua  water-sim.lua
examples/m5stick-demo/server/: env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
examples/m5stick-grove-vision-ai/: .gitignore  DEVICE-SKILL.md  README.md
examples/m5stick-grove-vision-ai/device/: platformio.ini
examples/m5stick-grove-vision-ai/device-apps/: presence.lua  rps-game.lua  rps-monitor.lua  skeleton.lua  tracker.lua
examples/m5stick-voice/: README.md
examples/m5stick-voice/device/: partitions.csv  platformio.ini
examples/m5stick-voice/server/: .dev.vars.example  .gitignore  README.md  env.d.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
examples/server-template/: README.md  env.d.ts  package-lock.json  package.json  wrangler.jsonc
examples/server-template/src/: worker.ts
src/: Outrun.h  OutrunDevice.cpp  OutrunDevice.h  OutrunDeviceConfig.h  OutrunDriver.h  OutrunExtension.h  OutrunExtensions.h  OutrunLuaModule.h  OutrunMessageHandler.h  OutrunModule.h  OutrunSandbox.cpp  OutrunSandbox.h  OutrunSandboxConfig.h  OutrunStatusDisplay.h  OutrunStatusLED.h  Resident.h  ResidentDevice.cpp  ResidentDevice.h  ResidentDeviceConfig.h  ResidentDriver.h  ResidentExtension.h  ResidentExtensions.h  ResidentLuaModule.h  ResidentNvsStore.h  ResidentPersistentStore.h  ResidentSandbox.cpp  ResidentSandbox.h  ResidentSandboxConfig.h  ResidentStatusDisplay.h  ResidentStatusLED.h  ResidentSystemButton.h  chipstring.h
test/unit/: platformio.ini
test/unit/include/: Arduino.h  Courier.h  Esp.h  Print.h  ezTime.h
tools/: publish-preflight.py  run-tests.py
tools/agent-plugin/: README.md
tools/agent-plugin/.claude-plugin/: plugin.json
(+106 files in other folders)
